polish: Daddy's Home (#2242)
* test: opt in Daddy's Home to sidebar check

* refactor: modernize

* refactor: gameval

* Better directions to Yarlo first time

* Consistent directions/direction format

* remove furniture: use a conditional step instead of substeps

No directions when last step was in Yarlo's house

* rebuild furniture: conditional step

* highlight build options in furniture

* reword search crate to include yarlo's full name

* reword operator talk to ensure directions all use dashes

* talk to operator teleport recommendation

* uncapitalize sawmill operator

* check for planks & logs in your bank

this ensures the user isn't told to wrongfully get the waxwood logs from the crates if they already have the logs or the
planks in their bank, and the user is now properly told at the item can be found in their bank

* directions to campbed

* campbed teleport item recommendation

* refactor: move last 2 steps down to the bottom

* highlight build campbed option

* remove direction to Old Man Yarlo since the previous step finished right next to him

* comment unreachable steps